# orbgen

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.B644A6C8B4BFEF1C.idx
include/: camera.h  objects.h  physics.h  vec.h
src/: main.c  physics.c  vec.c
